# Project_Aegis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  consensus_backtest.py  docker-compose.yml  entrypoint.py  main.py  pyproject.toml  requirements.txt  run_feature_engineer.py  run_ingestion.py  run_meta_backtest.py  run_ppo_only_backtest.py  run_ppo_training.py  run_xgb_only_backtest.py  run_xgb_training.py  streamlit.py
.github/workflows/: cd.yml  ci.yml
apps/dashboard/: app.py
apps/terminal_api/: api_app.py  app.py
artifacts/backtests/: hard_consensus_results.csv  hard_consensus_summary.csv  meta_policy_results.csv
artifacts/xgb/: xgb_directional.json
backtesting/: backtester.py  init.py  performance_analyzer.py
config/: api_keys.py  fyers_keys.py  settings.py
configs/: base.yaml  dev.yaml  prod.yaml
data/: RELIANCE.NS_historical.parquet  RELIANCE.NS_processed.parquet  TCS.NS_historical.parquet  TCS.NS_processed.parquet  data_loader.py  database.py  fyers_client.py  init.py  news_client.py  sentiment_daily.csv  trading_data.db  yfinance_client.py
deployment/docker/: Dockerfile  docker-compose.yml
docs/: Architecture.md  DeploymentGuide.md  DeveloperGuide.md
features/: feature_engineer.py  init.py  sentiment_analyzer.py  technical_indicators.py
knowledge/: ArchitectureDeepDive.md  FeatureEngineeringGuide.md  ProjectOverview.md
models/: init.py  model_registry.py
models/reinforcement/: init.py  ppo_agent.py  (+2 more)
src/: config.yaml  data_ingestor.py  feature_engineer.py
trading/: consensus_engine.py  execution_engine.py  init.py  portfolio_manager.py  risk_manager.py
utils/: init.py  logger.py
viewer/: app.py
(+26 files in other folders)
